@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-22T01:20:57Z",
+  "timestamp" : "2024-05-22T08:24:26Z",
   "count_outdated" : 4191,
   "uniques_outdated" : 2003,
-  "count" : 4230,
-  "uniques" : 2030,
+  "count" : 4231,
+  "uniques" : 2031,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
